Edit Node Type add that node

--- a/nodeTypes/CopyofStage-1/definition.yml
+++ b/nodeTypes/CopyofStage-1/definition.yml
@@ -13,6 +13,11 @@ metadata:
     config:
       - groupName: Options
         items:
+          - displayName: Warehouse
+            attributeName: warehouse
+            type: textBox
+            syntax: sql
+            isRequired: false
           - type: materializationSelector
             default: somethingelseentirely
             options:
