--- a/nodes/WORK-CSTG_REGION.yml
+++ b/nodes/WORK-CSTG_REGION.yml
@@ -1,5 +1,5 @@
 fileVersion: 1
-id: 67026188-4995-4385-af2a-91ded0e0dd88
+id: 813364c0-ef31-457b-af82-42eff3a49542
 name: CSTG_REGION
 operation:
   config:
@@ -8,6 +8,7 @@ operation:
     preSQL: ""
     testsEnabled: true
     truncateBefore: true
+    warehouse: TRANSFORMING_WH
   database: ""
   deployEnabled: true
   description: ""
@@ -19,8 +20,8 @@ operation:
     columns:
       - appliedColumnTests: {}
         columnReference:
-          columnCounter: 366464a8-c969-4b78-abe5-df1ebc341dc5
-          stepCounter: 67026188-4995-4385-af2a-91ded0e0dd88
+          columnCounter: 14e4ab6d-5ed8-4b66-8e57-4fcd2964e1bb
+          stepCounter: 813364c0-ef31-457b-af82-42eff3a49542
         config: {}
         dataType: NUMBER(38,0)
         description: ""
@@ -33,8 +34,8 @@ operation:
             transform: ""
       - appliedColumnTests: {}
         columnReference:
-          columnCounter: ec8c054c-18dc-4feb-b85a-d2846aae59d6
-          stepCounter: 67026188-4995-4385-af2a-91ded0e0dd88
+          columnCounter: 69757a62-eae0-413d-9656-fb4bef5feef7
+          stepCounter: 813364c0-ef31-457b-af82-42eff3a49542
         config: {}
         dataType: VARCHAR(25)
         description: ""
@@ -47,8 +48,8 @@ operation:
             transform: ""
       - appliedColumnTests: {}
         columnReference:
-          columnCounter: 1e499bf0-adf4-439c-bd7b-4c63cb1e5b92
-          stepCounter: 67026188-4995-4385-af2a-91ded0e0dd88
+          columnCounter: 0bc3f949-e99b-4318-8483-80df63ff42d6
+          stepCounter: 813364c0-ef31-457b-af82-42eff3a49542
         config: {}
         dataType: VARCHAR(152)
         description: ""
