--- a/nodes/WORK-STG_NATION1.yml
+++ b/nodes/WORK-STG_NATION1.yml
@@ -5,7 +5,7 @@ operation:
   config:
     insertStrategy: INSERT
     postSQL: ""
-    preSQL: ""
+    preSQL: broken
     testsEnabled: true
     truncateBefore: true
   database: ""
